appId: com.azisbek_dzhantaev.rikexpoapp
name: Login Form Basic Interaction
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible:
      id: "auth.login.screen"
    timeout: 60000
- assertNotVisible: "isn't responding"
- tapOn:
    id: "auth.login.email"
- inputText: "foundation@example.test"
- assertVisible: "foundation@example.test"
- hideKeyboard
- tapOn:
    id: "auth.login.password"
- inputText: "foundation-secret-123"
- hideKeyboard
- assertVisible: "foundation@example.test"
- stopApp
